--- a/Website/TemplateData/style.css
+++ b/Website/TemplateData/style.css
@@ -1,168 +1,95 @@
-@import url('https://fonts.googleapis.com/css?family=Poppins:400,500,700');
+.webgl-content * {border: 0; margin: 0; padding: 0}
+.webgl-content {position: absolute; top: 50%; left: 50%; -webkit-transform: translate(-50%, -50%); transform: translate(-50%, -50%);}
 
-html, body{
-  height: 100%;
-  width: 100%;
-  font-family: 'poppins', sans-serif;
-  color: #222;
-}
+.webgl-content .logo, .progress {position: absolute; left: 50%; top: 50%; -webkit-transform: translate(-50%, -50%); transform: translate(-50%, -50%);}
+.webgl-content .logo {background: url('progressLogo.Light.png') no-repeat center / contain; width: 154px; height: 130px;}
+.webgl-content .progress {height: 18px; width: 141px; margin-top: 90px;}
+.webgl-content .progress .empty {background: url('progressEmpty.Light.png') no-repeat right / cover; float: right; width: 100%; height: 100%; display: inline-block;}
+.webgl-content .progress .full {background: url('progressFull.Light.png') no-repeat left / cover; float: left; width: 0%; height: 100%; display: inline-block;}
 
-.navbar{
-  padding: .8rem;
-}
+.webgl-content .logo.Dark {background-image: url('progressLogo.Dark.png');}
+.webgl-content .progress.Dark .empty {background-image: url('progressEmpty.Dark.png');}
+.webgl-content .progress.Dark .full {background-image: url('progressFull.Dark.png');}
 
-.navbar-nav li{
-  padding-right: 20px;
-}
+.webgl-content .footer {margin-top: 5px; height: 38px; line-height: 38px; font-family: Helvetica, Verdana, Arial, sans-serif; font-size: 18px;}
+.webgl-content .footer .webgl-logo, .title, .fullscreen {height: 100%; display: inline-block; background: transparent center no-repeat;}
+.webgl-content .footer .webgl-logo {background-image: url('webgl-logo.png'); width: 204px; float: left;}
+.webgl-content .footer .title {margin-right: 10px; float: right;}
+.webgl-content .footer .fullscreen {background-image: url('fullscreen.png'); width: 38px; float: right;}
 
-.nav-link {
-  font-size: 1.1em !important;
-}
-
-.carousel-inner img{
-  width: 100%;
-  height: 100%;
-}
-
-.carousel-caption{
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-}
-
-.carousel-caption h1{
-  font-size: 500%;
-  text-transform: uppercase;
-  text-shadow: 1px 1px 15px #000;
-}
-
-.carousel-caption h3{
-  font-size: 200%;
-  font-weight: 500;
-  text-shadow: 1px 1px 10px #000;
-  padding-bottom: 1rem;
-}
-
-.btn-primary{
-  background-color: orangered;
-  border: 1px solid #000;
-}
-
-.btn-primary:hover{
-  background-color: orangered;
-  border: 1px solid  orangered;
-}
-
-.jumbotron{
-  padding: 1rem;
-  border-radius: 0;
-}
-
-.padding{
-  padding-bottom:2rem; 
-}
-
-.welcome{
-  width: 75%;
-  margin: 0 auto;
-  padding-top: 2rem;
-}
-
-.welcome hr{
-  border-top: 2px solid #b4b4b4;
-  width: 95%;
-  margin-top: .3rem;
-  margin-bottom: .1rem;
-}
-
-.fa-code{
-  color: #e54d26;
-}
-
-.logo-brand{
-  height:62px;
-  margin: 1rem;
-}
-
-.fa-code{
-  font-size: 4em;
-  margin: 1rem;
-}
+.backgroundpic{
+    background-image: url(../background.png);
+    background-repeat: repeat;
 
 }
 
-/*---Media Queries --*/
-@media (max-width: 992px) {
-
-  }
-@media (max-width: 768px) {
-  
-}
-@media (max-width: 576px) {
-  
-}
-
-
-/*---Firefox Bug Fix --*/
-.carousel-item {
-  transition: -webkit-transform 0.5s ease;
-  transition: transform 0.5s ease;
-  transition: transform 0.5s ease, -webkit-transform 0.5s ease;
-  -webkit-backface-visibility: visible;
-  backface-visibility: visible;
-}
-/*--- Fixed Background Image --*/
-figure {
-  position: relative;
-  width: 100%;
-  height: 60%;
-  margin: 0!important;
-}
-.fixed-wrap {
-  clip: rect(0, auto, auto, 0);
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-}
-#fixed {
-  background-image: url('../bg4.jpeg');
-  position: fixed;
-  display: block;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-size: cover;
-  background-position: center center;
-  -webkit-transform: translateZ(0);
-          transform: translateZ(0);
-  will-change: transform;
-}
-/*--- Bootstrap Padding Fix --*/
-[class*="col-"] {
-    padding: 1rem;
+.projectdis{
+    position: relative;
+    top:500px;
+    left:550px;
+    height :100px;
+    width :900px;
+    padding :00px;
+    margin :0px;
+    border :10px rgb(197, 170, 60);
+    background-color:rgb(183, 185, 62);
 }
 
+header{
+    background: #55d6aa;
+}
+header::after{
+    content:"";
+    display: table;
+    clear: both;
+}
 
+.logo{
+    float:left;
+}
 
+nav{
+    float:right;
+}
 
+nav ul{
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
 
-/*
-Extra small (xs) devices (portrait phones, less than 576px)
-No media query since this is the default in Bootstrap
+nav li{
+    display: inline-block;
+    margin-left: 70px;
+    padding-top: 25px;
+    margin-right: 50px;
 
-Small (sm) devices (landscape phones, 576px and up)
-@media (min-width: 576px) { ... }
+    position: relative;
+}
 
-Medium (md) devices (tablets, 768px and up)
-@media (min-width: 768px) { ... }
+nav a{
+    color: #444;
+    text-decoration: none;
+    text-transform:: uppercase;
+}
 
-Large (lg) devices (desktops, 992px and up)
-@media (min-width: 992px) { ... }
+nav a:hover {
+    color: #000;
+}
 
-Extra (xl) large devices (large desktops, 1200px and up)
-@media (min-width: 1200px) { ... }
-*/
+nav a::before{
+    content:"";
+    display: block;
+    height: 5px;
+    width: 100%;
+    background-color: #444;
 
+    position: absolute;
+    top:0;
+    width:0%;
+    transition: all ease-in-out 250ms;
+}
+
+nav a:hover::before{
+    width: 100%;
+}
